# ShotAsk

./: .claudeignore  .gitignore  CLAUDE.md  index.html  overlay.html  package.json  pnpm-lock.yaml  result.html  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
src/: app.ts  i18n.ts  main.ts  overlay.ts  result.ts  style.css  zoom.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  ollama.rs  screenshot.rs
