[package]
name = "shotask"
version = "1.0.0"
edition = "2021"

[lib]
name = "shotask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.3"
image = { version = "0.25", features = ["png"] }
png = "0.17"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1"
directories = "5"
log = "0.4"
env_logger = "0.11"
fs2 = "0.4"
